@@ -10,6 +10,8 @@ ChangeLog for hostapd
 	  for each STA based on RADIUS Access-Accept attributes); this requires
 	  VLAN support from the kernel driver/802.11 stack and this is
 	  currently only available with Devicescape and test driver interfaces
+	* driver_madwifi: fixed configuration of unencrypted modes (plaintext
+	  and IEEE 802.1X without WEP)
 
 2006-08-27 - v0.5.5
 	* added 'hostapd_cli new_sta <addr>' command for adding a new STA into
